# tusk

./: .gitignore  README.md  run.sh
etc/: 100.mlx  200-trim.mlx  300-convention.mlx  400.mlx  500-b.mlx  500.mlx  600.mlx  decimation.mlx  resampling.mlx
src/: CMakeLists.txt  draw_polyhedron_mesh.cpp  extrude.cpp  mouthguard.cpp  utils.cpp  utils.h
src/cmake/modules/: FindCppCheck.cmake
src/lib/: CMakeLists.txt
xmppbot/: Gemfile  xmppbot.rb
